<!--
  ~ Copyright (c) 2018 CoderLengary
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">WanAndroid</string>

    <string name="action_settings">Settings</string>


    <!--onboarding start-->
    <string name="onboarding_pre_btn_desc">Pre</string>
    <string name="onboarding_finish_btn_desc">Finish</string>
    <string name="onboarding_section_1">Here,you can gain lots of high quality articles</string>
    <string name="onboarding_intro_1">Include Gradle,Component,JNI and so on</string>
    <string name="onboarding_section_2">We update the articles daily </string>
    <string name="onboarding_intro_2">To make you access the latest theories</string>
    <string name="onboarding_section_3">A new world is waiting for you</string>
    <string name="onboarding_intro_3">Explore the unknown,at this moment</string>
    <!--onboarding end-->

    <!--login start-->
    <string name="title_activity_login_acitivity">Login</string>
    <string name="login_account_hint_text">Enter your username here</string>
    <string name="login_password_hint_text">Enter your password here</string>
    <string name="login_re_password_hint_text">Please enter your password again</string>
    <string name="login_btn_login">Login</string>
    <string name="login_btn_sign_up">Sign Up</string>
    <string name="register_btn_desc">Register</string>
    <string name="link_to_sign_up">Don\t have a account?create one</string>
    <string name="link_to_login">Already a member? Login</string>
    <string name="login_account_desc">User Name</string>
    <string name="login_password_desc">PASSWORD</string>
    <string name="login_error">The username and password you entered does not match</string>
    <string name="register_error">The username is already taken</string>
    <string name="input_error">What you input is invalid</string>
    <string name="repassword_not_match">The repassword and password you entered does not match</string>

    <!--login end-->

    <!--main start-->
    <string name="nav_log_out">Log out</string>
    <string name="nav_about">About</string>
    <string name="nav_switch_theme">Day/Night Mode</string>
    <string name="nav_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_articles">Articles</string>
    <string name="nav_categories">Categories</string>
    <string name="empty_text">There is nothing</string>
    <string name="item_menu_search">Search</string>
    <!--main end-->

    <!--Timeline start-->
    <string name="timeline_label">TimeLine</string>
    <string name="timeline_articles">Articles</string>
    <string name="timeline_favorites">Favorites</string>
    <string name="timeline_read_later">Read Later</string>
    <!--Timeline end-->
    
    <!--Detail start-->
    <string name="detail_label">Detail</string>
    <string name="detail_collect_article">Collect article</string>
    <string name="detail_uncollect_article">Uncollect article</string>
    <string name="detail_add_to_read_later">Add to read later</string>
    <string name="detail_remove_from_read_later">Remove from read later</string>
    <string name="detail_copy_the_link">Copy the link</string>
    <string name="detail_share">Share</string>
    <string name="detail_share_to">Share to</string>
    <string name="detail_open_in_system_browser">Open in system browser</string>
    <string name="detail_copied_to_clipboard">Copied to clipboard</string>
    <string name="detail_no_browser_found">No browser found</string>
    <string name="detail_no_activity_found">No activity found</string>
    <string name="detail_collect_article_error">Fail to collect article</string>
    <string name="detail_collect_article_success">Success</string>
    <string name="detail_uncollect_article_error">Fail to uncollect article</string>
    <string name="detail_uncollect_article_success">Success</string>
    <!--Detail end-->

    <!--Categories start-->
    <string name="categories_label">Categories</string>
    <!--Categories end-->

    <!--Category start-->
    <string name="category_label">Category</string>
    <!--Category end-->

    <!--Search start-->
    <string name="search_label">Search</string>
    <string name="search_tint">Search articles</string>
    <!--Search end-->

    <!--About start-->
    <string name="about_settings">Settings</string>
    <string name="about_navigation_bar_tint">Navigation bar tint</string>
    <string name="about_navigation_bar_tint_desc">Color the navigation bar.</string>
    <string name="about_navigation_bar_restart_msg">Changes will be applied after restarting app.</string>
    <string name="about_version">Version</string>
    <string name="about_rate">Rate</string>
    <string name="about_rate_desc">If you like this app,please do rate it</string>
    <string name="about_licenses">Licenses</string>
    <string name="about_thanks">Thanks</string>
    <string name="about_lizhaotailang">Li Zhao Tai Lang</string>
    <string name="about_lizhaotailang_desc">Appreciate his help very much</string>
    <string name="about_lizhaotailang_link">https://github.com/TonnyL</string>
    <string name="about_hongyang">Hong Yang</string>
    <string name="about_hongyang_desc">API provider</string>
    <string name="about_hongyang_link">https://github.com/hongyangAndroid</string>
    <string name="about_support">Support</string>
    <string name="about_source_code">GitHub Source code</string>
    <string name="about_source_code_link">https://github.com/CoderLengary/WanAndroid</string>
    <string name="about_send_advices">Send advices</string>
    <string name="about_send_advices_desc">Help me improve this app</string>
    <string name="mail_account">mailto:719952215@qq.com</string>
    <string name="mail_topic">WanAndroid Advices</string>
    <!--About end-->


    <!--Error-->
    <string name="error">Something wrong</string>
    <string name="network_error">Network is not available</string>
    <!--Error-->

    <!--Warning-->
    <string name="warning_title">Warning</string>
    <string name="warning_desc">If you log out, all the data will be deleted.</string>
    <string name="cancel">Cancel</string>
    <string name="sure">Sure</string>
    <string name="tip">Fail to login automatically, navigate to login page.</string>
    <!--Warning-->
</resources>
